# TypeSI

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: docs.yml  linting.yml  testing.yml
docs/: CNAME  Doxyfile  index.html
docs/html/: annotated.html  class_si_1_1_internal_1_1_generic_prefix-members.html  class_si_1_1_internal_1_1_generic_prefix.html  class_si_1_1_internal_1_1_unit-members.html  class_si_1_1_internal_1_1_unit.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  index.html  menudata.js  namespace_si_1_1_base.html  namespace_si_1_1_base_1_1_literals.html  namespace_si_1_1_derived.html  namespace_si_1_1_derived_1_1_literals.html  namespace_si_1_1_internal.html  namespace_si_1_1_math.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  si_8hpp.html  si_8hpp_source.html  si__base_8hpp.html  si__base_8hpp_source.html  si__derived_8hpp.html  si__derived_8hpp_source.html  si__internal_8hpp.html  si__internal_8hpp_source.html  si__math_8hpp.html  si__math_8hpp_source.html  si__prefix_8hpp.html  si__prefix_8hpp_source.html  si__special_8hpp.html  si__special_8hpp_source.html  si__utilities_8hpp.html  si__utilities_8hpp_source.html  struct_si_1_1_internal_1_1_tuple.html  (+4 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+40 more)
docs/latex/: annotated.tex  class_si_1_1_internal_1_1_generic_prefix.tex  class_si_1_1_internal_1_1_unit.tex  files.tex  index.tex  namespace_si_1_1_base.tex  namespace_si_1_1_base_1_1_literals.tex  namespace_si_1_1_derived.tex  namespace_si_1_1_derived_1_1_literals.tex  namespace_si_1_1_internal.tex  namespace_si_1_1_math.tex  namespaces.tex  refman.tex  si_8hpp.tex  si_8hpp_source.tex  si__base_8hpp.tex  si__base_8hpp_source.tex  si__derived_8hpp.tex  si__derived_8hpp_source.tex  si__internal_8hpp.tex  si__internal_8hpp_source.tex  si__math_8hpp.tex  si__math_8hpp_source.tex  si__prefix_8hpp.tex  si__prefix_8hpp_source.tex  si__special_8hpp.tex  si__special_8hpp_source.tex  si__utilities_8hpp.tex  si__utilities_8hpp_source.tex  struct_si_1_1_internal_1_1_tuple.tex  struct_si_1_1_internal_1_1std__pow.tex  struct_si_1_1_special_1_1_gram.tex
src/: si.hpp  si_base.hpp  si_derived.hpp  si_internal.hpp  si_math.hpp  si_prefix.hpp  si_special.hpp  si_utilities.hpp
test/: CMakeLists.txt  base.cpp  derived.cpp  general.cpp  internal.cpp  math.cpp  prefix.cpp  special.cpp
test/malformed/: CMakeLists.txt  addition.cpp  addition_assignment.cpp  common.hpp  division_assignment.cpp  function_call.cpp  multiplication_assignment.cpp  subtraction.cpp  subtraction_assignment.cpp
